[package]
name = "dkpy-hn-cli"
version = "0.1.1"
edition = "2024"
description = "Get top hacker news posts from the CLI"
license = "MIT"
repository = "https://github.com/dekoder-py/hn_cli"
readme = "README.md"

[[bin]]
name = "hn_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
